--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.percobaan">
 
     <application
         android:allowBackup="true"
@@ -12,25 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Percobaan"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Percobaan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- InputActivity: Set exported to true to allow other apps to launch it -->
-        <activity android:name=".InputActivity"
-            android:exported="true" />
-
-        <!-- ResultActivity: Set exported to true or false as needed -->
-        <activity android:name=".ResultActivity"
-            android:exported="true" />
+        <activity android:name=".MainActivity" android:exported="true" />
+        <activity android:name=".DetailActivity" android:exported="true" />
 
     </application>
 
